sd8887: driver update to C3X15084
SD-WLAN-8887S-15.68.7.p10-C3X15084

Change-Id: I2b8c84ac6a6405001e63c89b1fbe02367b0cf0cd
Signed-off-by: Gannicus Guo <jiaguo@marvell.com>

--- a/drivers/marvell/sd8887/wlan_src/Makefile
+++ b/drivers/marvell/sd8887/wlan_src/Makefile
@@ -454,7 +454,7 @@ build:		echo default
 	fi
 
 	cp -f mlan.$(MODEXT) $(BINDIR)/mlan$(DBG).$(MODEXT)
-	cp -f sd8xxx.$(MODEXT) $(BINDIR)/sd8xxx$(DBG).$(MODEXT)
+	cp -f sd8887.$(MODEXT) $(BINDIR)/sd8887$(DBG).$(MODEXT)
 
 ifeq ($(CONFIG_STA_SUPPORT),y)
 	cp -f README $(BINDIR)
