--- a/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
@@ -39,7 +39,9 @@
 			      <0x1 0x4b 0x30 0x00>,
 			      <0x1 0x51 0x30 0x00>,
 			      <0x1 0x57 0x30 0x00>,
-			      <0x1 0x69 0x30 0x00>;
+			      <0x1 0x69 0x30 0x00>,
+			      /* enable audio mode */
+			      <0x1 0x06 0x10 0x10>;
 
 	/* ---buck--- */
 	vccmain: regulator-buck1 {
