arm64: dts: seperate the sensor power-supply for v10 and v20 1936dkb board
for sensor, power supply is ldo18 on 1936dkb v10 board. But for V20 board, it is
the ldo16. so now it needs to be seperated

Change-Id: I2bb5bd891b05f8304efafe3b54220baa9066d281
Signed-off-by: Xiaofei Zhu <zhuxf@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
@@ -62,6 +62,29 @@
 					};
 				};
 			};
+			twsi3: i2c@d4013800 {
+				status = "okay";
+				sensor1: apds9930@39 {
+					avdd-supply = <&ldo16>;
+					};
+				sensor2: bmi160@68 {
+					avdd-supply = <&ldo16>;
+					};
+
+				sensor3: bme280@76 {
+					avdd-supply = <&ldo16>;
+					};
+				sensor4: icm20628@69 {
+					avdd-supply = <&ldo16>;
+					};
+				sensor5: mxc400x@15 {
+					avdd-supply = <&ldo16>;
+					};
+				sensor6: mmc3524x@30 {
+					avdd-supply = <&ldo16>;
+					};
+			};
+
 		};
 
 		axi@d4200000 {  /* AXI */
