--- a/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
@@ -99,6 +99,30 @@
 					};
 				};
 			};
+			twsi3: i2c@d4013800 {
+				status = "okay";
+				sensor1: apds9930@39 {
+					avdd-supply = <&ldo18>;
+					};
+
+					sensor2: bmi160@68 {
+					avdd-supply = <&ldo18>;
+					};
+
+					sensor3: bme280@76 {
+					avdd-supply = <&ldo18>;
+					};
+					sensor4: icm20628@69 {
+					avdd-supply = <&ldo18>;
+					};
+					sensor5: mxc400x@15 {
+					avdd-supply = <&ldo18>;
+					};
+					sensor6: mmc3524x@30 {
+					avdd-supply = <&ldo18>;
+					};
+			};
+
 		};
 
 		axi@d4200000 {  /* AXI */
