--- a/arch/arm64/boot/dts/pxa1936-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1936-board-common.dtsi
@@ -980,7 +980,8 @@
 				mmp_map_codec: mmp_map_codec {
 					compatible = "marvell,mmp-map-codec";
 					#dailink-cells = <1>;
-					sleep_vol = <800>;
+					vccmain-supply = <&buck1a>;
+					sleep_vol = <800000>;
 				};
 				mmp_map_be: mmp_map_be {
 					compatible = "marvell,mmp-map-be";
