arm64: dts: pxa1908: replace DS_MEDIUM to SLOW0 for SD Card
Tested by oscilloscope, using DS_SLOW0 has better signal waveform than
DS_MEDIUM. Originally, it is over-shoot.

Change-Id: Ib8fda0d145a859cb9b41a607006943d3373df706
Signed-off-by: Jialing Fu <jlfu@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-board-common.dtsi
@@ -492,7 +492,7 @@
 						MMC1_DAT0 AF0
 						MMC1_CMD AF0
 					>;
-					MFP_DEFAULT;
+					DS_SLOW0;PULL_NONE;EDGE_NONE;LPM_NONE;
 				};
 
 				/* MFP_LPM_DRIVE_LOW */
@@ -500,7 +500,7 @@
 					pinctrl-single,pins = <
 						MMC1_CLK AF0
 					>;
-					MFP_LPM_DRIVE_LOW;
+					DS_SLOW0;PULL_NONE;EDGE_NONE;LPM_DRIVE_LOW;
 				};
 
 				/* ds fast, no pull, no LPM */
