--- a/arch/arm64/boot/dts/88pm886_pxa1908_ff.dtsi
+++ b/arch/arm64/boot/dts/88pm886_pxa1908_ff.dtsi
@@ -166,7 +166,12 @@
        };
 
 	onkey {
-		marvell,pm88x-onkey-gpio-number = <0>;
+		pm88x-onkey-gpio-number = <0>;
+		pm88x-onkey-long-onkey-type = <2>;
+		pm88x-onkey-disable-long-key-rst = <0>;
+		pm88x-onkey-long-key-press-time = <10>;
+		pm88x-onkey-hwrst-db-period = <1>;
+		pm88x-onkey-hwrst-type = <1>;
 	};
 
 	vbus {
