arm64: dts: don't disable ldos in suspend
for helan3_v20
disable sleep mode for ldo 3, 9, 12, 13, since they
are used by CP part.
for helan3_v10
disable sleep mode for ldo 3, 12, 14, 15 for the same
reason.

Change-Id: Ibcc44dd69b9ad55cb723807944451c69282b32c1
Signed-off-by: Fenghang Yin <yinfh@marvell.com>

--- a/arch/arm64/boot/dts/88pm860_pxa1936_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm860_pxa1936_dkb.dtsi
@@ -12,11 +12,11 @@
 	 * board specific register configuration
 	 * marvell,pmic-board-cfg = <page reg mask data>;
 	 */
-	/* disable ldo 5 ~ 8, 10 ~ 14, 17, 19, 20 in sleep mode */
+	/* disable ldo 5 ~ 8, 10, 11, 13, 17, 19, 20 in sleep mode */
 	marvell,pmic-board-cfg =
 			      <0x1 0x5d 0xff 0x0>,
-			      <0x1 0x5e 0xfc 0x0>,
-			      <0x1 0x5f 0x0f 0x0>,
+			      <0x1 0x5e 0x3c 0x0>,
+			      <0x1 0x5f 0x03 0x0>,
 			      <0x1 0x60 0xf3 0x0>,
 			      /* enable buck1a sleep mode */
 			      <0x1 0x5a 0x03 0x02>,
