--- a/drivers/media/i2c/b52_camera/Kconfig
+++ b/drivers/media/i2c/b52_camera/Kconfig
@@ -59,3 +59,9 @@ config B52_CAMERA_OV5670
        depends on VIDEO_MMPISP_B52 && I2C
        help
        This is a V4L2 camera driver for the ov5670 sensor
+
+config B52_CAMERA_S5K3L2
+       tristate "S5K3L2 camera support"
+       depends on VIDEO_MMPISP_B52 && I2C
+       help
+       This is a V4L2 camera driver for the s5k3l2 sensor
