--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -2038,6 +2038,7 @@ CONFIG_B52_CAMERA_OV2680=y
 CONFIG_B52_CAMERA_OV8858=y
 CONFIG_B52_CAMERA_SR544=y
 CONFIG_B52_CAMERA_HI551=y
+CONFIG_B52_CAMERA_S5K3L2=y
 # CONFIG_B52_CAMERA_OV5670 is not set
 
 #
