arm64: configs: enable TDM slot static allocation for Helan3
SS will use NXP speaker which may need TDM slot
static allocation, so enable it.

Don't merge this patch for ULC1.

Change-Id: I2f6c45de299e318b4c905b71a6e33dc10f85f650
Signed-off-by: Leilei Shang <shangll@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -236,6 +236,8 @@ CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
+CONFIG_ARM64_THREADINFO_SLABCACHE=y
+CONFIG_THREADINFO_MEMPOOL=y
 
 #
 # Platform selection
@@ -1452,8 +1454,8 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_VBUS_88PM80X=y
 CONFIG_VBUS_88PM830=y
 CONFIG_VBUS_88PM88X=y
-CONFIG_PXA9XX_AMIPC=y
 CONFIG_VIBRATOR_DRV2604=y
+CONFIG_PXA9XX_AMIPC=y
 CONFIG_VIBRATOR_PWM=y
 CONFIG_PXA9XX_ACIPC=y
 # CONFIG_MXDCMMB is not set
@@ -2177,6 +2179,7 @@ CONFIG_SND_MMP_PCM_HOSTLESS=y
 # CONFIG_SND_PXA910_SOC is not set
 CONFIG_SND_MMP_MAP=y
 CONFIG_SND_MMP_MAP_DUMP=y
+CONFIG_SND_TDM_STATIC_ALLOC=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 CONFIG_SND_MMP_MAP_FE_DAI=y
 CONFIG_SND_SOC_88PM860=y
@@ -2436,7 +2439,6 @@ CONFIG_USB_MV_UDC=y
 CONFIG_USB_LIBCOMPOSITE=y
 CONFIG_USB_F_ACM=y
 CONFIG_USB_U_SERIAL=y
-# CONFIG_USB_F_MASS_STORAGE is not set
 # CONFIG_USB_CONFIGFS is not set
 # CONFIG_USB_ZERO is not set
 # CONFIG_USB_AUDIO is not set
