--- a/arch/arm/configs/pxa1908_defconfig
+++ b/arch/arm/configs/pxa1908_defconfig
@@ -15,7 +15,8 @@ CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CALIBRATE_DELAY=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_VECTORS_BASE=0xffff0000
-CONFIG_ARM_PATCH_PHYS_VIRT=y
+# CONFIG_ARM_PATCH_PHYS_VIRT is not set
+CONFIG_PHYS_OFFSET=0x800000
 CONFIG_GENERIC_BUG=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
@@ -417,8 +418,7 @@ CONFIG_VMSPLIT_3G=y
 # CONFIG_VMSPLIT_2G is not set
 # CONFIG_VMSPLIT_1G is not set
 CONFIG_PAGE_OFFSET=0xC0000000
-CONFIG_TEXT_OFFSET_OVERRIDE=y
-CONFIG_TEXT_OFFSET=0x208000
+# CONFIG_TEXT_OFFSET_OVERRIDE is not set
 CONFIG_NR_CPUS=4
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_ARM_PSCI is not set
@@ -1535,7 +1535,7 @@ CONFIG_TOUCHSCREEN_VNC=y
 # CONFIG_TOUCHSCREEN_ST1232 is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
 # CONFIG_TOUCHSCREEN_88MS100 is not set
-# CONFIG_TOUCHSCREEN_MSG2133 is not set
+CONFIG_TOUCHSCREEN_MSG2133=y
 # CONFIG_TOUCHSCREEN_MSG2138 is not set
 # CONFIG_TOUCHSCREEN_FT6206 is not set
 # CONFIG_TOUCHSCREEN_SUR40 is not set
@@ -2272,7 +2272,7 @@ CONFIG_MMP_PANEL_R63311=y
 # CONFIG_MMP_PANEL_COMMON is not set
 CONFIG_MMP_PANEL_LG4591=y
 CONFIG_MMP_PANEL_OTM1281A=y
-# CONFIG_MMP_PANEL_OTM8018B is not set
+CONFIG_MMP_PANEL_OTM8018B=y
 # CONFIG_MMP_PANEL_OTM1283A is not set
 CONFIG_MMP_PANEL_TD043MGEA1=y
 CONFIG_MMP_PANEL_HX8394=y
@@ -3054,9 +3054,9 @@ CONFIG_PXA_RAMDUMP=y
 CONFIG_MRVL_SKMALLOC=y
 CONFIG_SKMALLOC_REBOOT_NOTIFY=y
 CONFIG_MRVL_SKMALLOC_WIRELESS_EN=y
-CONFIG_MRVL_MMP_MODEM=m
+CONFIG_MRVL_MMP_MODEM=y
 # CONFIG_SSIPC_SUPPORT is not set
-CONFIG_MRVL_MMP_CM3=m
+CONFIG_MRVL_MMP_CM3=y
 CONFIG_MRVL_RSV_PAGE=y
 
 #
