arm64: dts: add device tree support for onkey of 88pm88x
add options of long onkey detection, long onkey press time, hardware reset
debounce period, hardware reset type, and switch to disable long onkey reset.

Change-Id: Ib293f9e5105c8bd93f7b096c1ad091c12856d2a4
Signed-off-by: Yaowei Li <ywli@marvell.com>

--- a/arch/arm64/boot/dts/88pm880_pxa1936_ff.dtsi
+++ b/arch/arm64/boot/dts/88pm880_pxa1936_ff.dtsi
@@ -169,7 +169,12 @@
        };
 
 	onkey {
-		marvell,pm88x-onkey-gpio-number = <1>;
+		pm88x-onkey-gpio-number = <1>;
+		pm88x-onkey-long-onkey-type = <2>;
+		pm88x-onkey-disable-long-key-rst = <0>;
+		pm88x-onkey-long-key-press-time = <10>;
+		pm88x-onkey-hwrst-db-period = <1>;
+		pm88x-onkey-hwrst-type = <1>;
 	};
 
 	vbus {
