Revert "arm64: dts: pxa1908: replace DS_MEDIUM to SLOW0 for SD Card"
This reverts commit daac05e6783c6c0564839ed6e8da12ee64cc5259
Finding the patch is not helpful in Pxa1908-FF, so revert it.

Change-Id: I8c03fa91029d762a1e86455058ac373b5dea104f
Signed-off-by: Jialing Fu <jlfu@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-board-common.dtsi
@@ -491,7 +491,7 @@
 						MMC1_DAT0 AF0
 						MMC1_CMD AF0
 					>;
-					DS_SLOW0;PULL_NONE;EDGE_NONE;LPM_NONE;
+					MFP_DEFAULT;
 				};
 
 				/* MFP_LPM_DRIVE_LOW */
@@ -499,7 +499,7 @@
 					pinctrl-single,pins = <
 						MMC1_CLK AF0
 					>;
-					DS_SLOW0;PULL_NONE;EDGE_NONE;LPM_DRIVE_LOW;
+					MFP_LPM_DRIVE_LOW;
 				};
 
 				/* ds fast, no pull, no LPM */
