arm64: dts: add micbias configuration for pxa1908 and pxa1936
Add micbias LDO and LDO voltage configuration for
pxa1908 and pxa1936

Change-Id: Ia78cc34aaf7fec8e244b1962567b1406fcb79333
Signed-off-by: Zhao Ye <zhaoy@marvell.com>

--- a/arch/arm64/boot/dts/88pm860_pxa1936_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm860_pxa1936_dkb.dtsi
@@ -60,6 +60,7 @@
 		marvell,mic-det-th = <600>;
 		marvell,press-release-th = <600>;
 		marvell,micbias-supply = <&ldo20>;
+		marvell,micbias-volt = <1700>;
 		status = "okay";
 	};
 
