--- a/arch/arm64/boot/dts/pxa1936-ff.dts
+++ b/arch/arm64/boot/dts/pxa1936-ff.dts
@@ -296,19 +296,14 @@
 			#size-cells = <0>;
 			status = "okay";
 
-			OV5642: sensor@0 {
-
-				status = "disabled";
-			};
-
 			OV13850: sensor@1 {
 				compatible = "ovt,ov13850";
-				sc2-i2c-dyn-ctrl;
+				status = "okay";
 				reg = <0x10>;
 				clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
 				clock-names = "SC2MCLK";
+				sc2-i2c-dyn-ctrl;
 				adapter = <0x1>;
-				status = "okay";
 				sensor-pos = <1>;
 				mclk = <24000000>;
 				dphy3 = <0xff4115>;
@@ -317,28 +312,19 @@
 				af_2v8-supply = <&ldo8>;
 				avdd_2v8-supply = <&ldo7>;
 				dovdd_1v8-supply = <&buck2>;
-				dvdd_1v2-supply = <&buck3>;
-				pwdn-gpios = <&gpio CAM_MAIN_PWDN_N 1>;
-				reset-gpios = <&gpio CAM1_RST_N 1>;
+				dvdd_1v2-supply = <&ldo19>;
+				pwdn-gpios = <&gpio 68 1>;
+				reset-gpios = <&gpio 67 1>;
 			};
 
-			/* ToDo: Need to remove from common file disable items in DTS */
-			SR544: sensor@2 {
-				status = "disabled";
-			};
-
-			imx219: sensor@3 {
-				status = "disabled";
-			};
-
-			OV13850R2A: sensor@4 {
+			OV13850R2A: sensor@2 {
 				compatible = "ovt,ov13850r2a";
-				status = "okay";
+				sc2-i2c-dyn-ctrl;
 				reg = <0x10>;
 				clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
 				clock-names = "SC2MCLK";
-				sc2-i2c-dyn-ctrl;
 				adapter = <0x1>;
+				status = "okay";
 				sensor-pos = <1>;
 				mclk = <24000000>;
 				dphy3 = <0xff4116>;
