arm64: dts: disable soc camera on pxa1936ff
since we are not using soc camera on pxa1936ff, change status of
mcam0 & mcam1 in pxa1936-ff.dts to disabled.
this will prevent unnecessary (&failure) probing in boot.

Signed-off-by: Yaacov Hazan <yaacovh@marvell.com>
Change-Id: I40f2ecceccd2b16b6ea8553160679234ec58545f

--- a/arch/arm64/boot/dts/pxa1936-ff.dts
+++ b/arch/arm64/boot/dts/pxa1936-ff.dts
@@ -236,7 +236,7 @@
 		dvdd_1v2-supply = <&buck3>;
 		*/
 		dphy_val = <0xff1d00 0x00024733 0x04001001>;
-		status = "disable";
+		status = "disabled";
 	};
 
 	mcam1:mcam@1 {
@@ -249,15 +249,15 @@
 		dvdd_1v2-supply = <&buck3>;
 
 		dphy_val = <0xff1d00 0x00024733 0x04001001>;
-		status = "okay";
+		status = "disabled";
 	};
 
 	soc-camera@0 {
-		status = "okay";
+		status = "disabled";
 	};
 
 	soc-camera@1 {
-		status = "okay";
+		status = "disabled";
 	};
 
 	plat_cam {
