--- a/arch/arm64/boot/dts/pxa1908-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-board-common.dtsi
@@ -29,9 +29,8 @@
 			compatible = "marvell,power-domain-display-pxa1u88";
 			reg = <0xd4282800 0x1000>;
 			clocks = <&soc_clocks PXA1U88_CLK_DISP_HCLK>,
-				<&soc_clocks PXA1U88_CLK_DSI_ESC>,
-				<&soc_clocks PXA1U88_CLK_DISP1_EN>;
-			clock-names = "LCDCIHCLK", "esc_clk", "disp1_clk_gate";
+				<&soc_clocks PXA1U88_CLK_DSI_ESC>;
+			clock-names = "LCDCIHCLK", "esc_clk";
 		};
 
 		smmu {  /* iommu in vpu */
