arm64: dts: add property for 88pm886/88pm880
88pm886: buck1-sleep
88pm880: buck1-sleep

Change-Id: I00fa50dd069728bbc40067fc03c4c5c124d7c8c3
Signed-off-by: Yi Zhang <yizhang@marvell.com>
Signed-off-by: Yaowei Li <ywli@marvell.com>

--- a/arch/arm64/boot/dts/88pm880.dtsi
+++ b/arch/arm64/boot/dts/88pm880.dtsi
@@ -154,4 +154,11 @@
 		regulator-min-microvolt = <1700000>;
 		regulator-max-microvolt = <2800000>;
 	};
+
+	/* virtual regulator */
+	buck1aslp: regulator-buck1a-slp {
+		compatible = "marvell,88pm880-buck1a-slp";
+		regulator-min-microvolt = <600000>;
+		regulator-max-microvolt = <1800000>;
+	};
 };
