marvell: cm3: rework buck1 sleep voltage
for 88pm886/88pm880 series boards:
use regulator_set_voltage() to cover, after buck1-sleep is configured as
a virtual regulator

Change-Id: I9dcac5ecb0ba8332bad6b2013569af16433a6da1
Signed-off-by: Yi Zhang <yizhang@marvell.com>
Signed-off-by: Yaowei Li <ywli@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-board-common.dtsi
@@ -1219,7 +1219,7 @@
 		vccmain = <950000 700000>;
 		vm3pwr-supply = <&ldo3>;
 		antpwr-supply = <&ldo4>;
-		vccmain-supply = <&vccmain>;
+		vccmain-supply = <&buck1slp>;
 
 		pinctrl-names = "default", "poweron";
 		pinctrl-0 = <&gnss_pmx_def &gpio10_pull_up>;
@@ -1235,7 +1235,7 @@
 		vm3pwr-supply = <&ldo3>;
 		antpwr-supply = <&ldo4>;
 		senpwr-supply = <&ldo4>;
-		vccmain-supply = <&vccmain>;
+		vccmain-supply = <&buck1slp>;
 
 		pinctrl-names = "default", "poweron";
 		pinctrl-0 = <&gnss_pmx_def &twsi3_pmx_senhb_def &senhb_irq_pins_def
