arm64: dts: configure attribute for 88pm886/88pm880 buck1_sleep regulator
always-on and boot-on are needed by them

Change-Id: Ia2e5dfe66556f24e20b5f4c58e2b6320354d4cc8
Signed-off-by: Yi Zhang <yizhang@marvell.com>
Signed-off-by: Yaowei Li <ywli@marvell.com>

--- a/arch/arm64/boot/dts/88pm880.dtsi
+++ b/arch/arm64/boot/dts/88pm880.dtsi
@@ -160,5 +160,7 @@
 		compatible = "marvell,88pm880-buck1a-slp";
 		regulator-min-microvolt = <600000>;
 		regulator-max-microvolt = <1800000>;
+		regulator-always-on;
+		regulator-boot-on;
 	};
 };
