--- a/arch/arm64/boot/dts/88pm886.dtsi
+++ b/arch/arm64/boot/dts/88pm886.dtsi
@@ -134,6 +134,8 @@
 		compatible = "marvell,88pm886-buck1-slp";
 		regulator-min-microvolt = <600000>;
 		regulator-max-microvolt = <1800000>;
+		regulator-always-on;
+		regulator-boot-on;
 	};
 
 };
