sound: codec: rework audio mode for Marvell audio map
the interface is different in different PMICs;
considering we will remove the 88pm860 in future, so just use
devicetree to cover this difference

Change-Id: I0c0232fb0dc2e64468e5b6d47773a920e1095127
Signed-off-by: Yi Zhang <yizhang@marvell.com>
Signed-off-by: Yaowei Li <ywli@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
@@ -132,6 +132,10 @@
 			      vmmc-supply     = <&ldo5>;
 			};
 		};
+		map@d1200000 {
+				pmic-name = "88pm860";
+				vccmain-supply = <&buck1a>;
+		};
 	};
 	panel1: r63311 {
 		rst_gpio = <&gpio 98 0>;
