--- a/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
@@ -84,7 +84,10 @@
 					avdd-supply = <&ldo16>;
 					};
 			};
-
+			map@d1200000 {
+				pmic-name = "88pm880";
+				vccmain-supply = <&buck1aslp>;
+			};
 		};
 
 		axi@d4200000 {  /* AXI */
