--- a/arch/arm64/boot/dts/pxa1936-ff.dts
+++ b/arch/arm64/boot/dts/pxa1936-ff.dts
@@ -202,6 +202,11 @@
 				};
 
 			};
+			map@d1200000 {
+				pmic-name = "88pm880";
+				vccmain-supply = <&buck1aslp>;
+				sleep_vol = <975000>;
+			};
 
 		};
 
