--- a/arch/arm64/boot/dts/pxa1936-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1936-board-common.dtsi
@@ -976,6 +976,7 @@
 			map: map@d1200000 {
 				marvell,b0_fix;
 				marvell,apll = <0>;
+				lpm-qos = <PM_QOS_CPUIDLE_BLOCK_UDR>;
 				status = "okay";
 				mmp_map_codec: mmp_map_codec {
 					compatible = "marvell,mmp-map-codec";
