arm64: dts: remove fake hook interrupt in suspend
If set micbias(LDO18) as disabled when SLEEPn is 0,
fake hook interrupt will wrongly wake up system
continuously from suspend.

Change-Id: I9e74c076dd330b44ea4cefdf7413e985542756c5
Signed-off-by: Leilei Shang <shangll@marvell.com>

--- a/arch/arm64/boot/dts/88pm880_pxa1936_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm880_pxa1936_dkb.dtsi
@@ -19,7 +19,7 @@
 		<0x4 0x24 0x30 0x20>,
 		/* set buck1a sleep voltage to 0.7v */
 		<0x4 0x26 0x7f 0x08>,
-		/* disable ldo 5 ~ 8, 10, 11, 14, 16 ~ 18 */
+		/* disable ldo 5 ~ 8, 10, 11, 14, 16, 17 */
 		<0x1 0x39 0x30 0x00>,
 		<0x1 0x3f 0x30 0x00>,
 		<0x1 0x45 0x30 0x00>,
@@ -28,8 +28,7 @@
 		<0x1 0x5d 0x30 0x00>,
 		<0x1 0x6f 0x30 0x00>,
 		<0x1 0x7b 0x30 0x00>,
-		<0x1 0x81 0x30 0x00>,
-		<0x1 0x87 0x30 0x00>;
+		<0x1 0x81 0x30 0x00>;
 
 	/* ---buck--- */
 	vccmain: regulator-buck1a {
