--- a/drivers/media/i2c/b52_camera/Makefile
+++ b/drivers/media/i2c/b52_camera/Makefile
@@ -6,5 +6,6 @@ obj-$(CONFIG_B52_CAMERA_OV2680)         += ov2680.o
 obj-$(CONFIG_B52_CAMERA_SR544)		+= sr544.o
 obj-$(CONFIG_B52_CAMERA_HI551)		+= hi551.o
 obj-$(CONFIG_B52_CAMERA_OV5670)         += ov5670.o
+obj-$(CONFIG_B52_CAMERA_S5K5E3)         += s5k5e3.o
 obj-$(CONFIG_B52_CAMERA_OV13850R2A)	+= ov13850r2a.o
 obj-$(CONFIG_B52_CAMERA_S5K3L2)		+= s5k3l2.o
