arm64: defconfig: enable the sensor S5K5E3 for UCL1/HELAN3 platform
Change-Id: I353bbb237567d8c533536dd1f5abeecd798e06ba
Signed-off-by: yangyang <yy@vendor.marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -2039,6 +2039,7 @@ CONFIG_B52_CAMERA_OV8858=y
 CONFIG_B52_CAMERA_SR544=y
 CONFIG_B52_CAMERA_HI551=y
 CONFIG_B52_CAMERA_S5K3L2=y
+CONFIG_B52_CAMERA_S5K5E3=y
 # CONFIG_B52_CAMERA_OV5670 is not set
 
 #
