--- a/arch/arm64/boot/dts/pxa1908-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dts
@@ -92,6 +92,26 @@
 				pwdn-gpios = <&gpio 70 1>;
 				reset-gpios = <&gpio 69 1>;
 			};
+			S5K5E3F: sensor@1 {
+				compatible = "samsung,s5k5e3";
+				status = "okay";
+				clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
+				clock-names =  "SC2MCLK";
+				reg = <0x10>;
+				sc2-i2c-dyn-ctrl;
+				adapter = <0x1>;
+				sensor-pos = <1>;
+				mclk = <26000000>;
+				dphy3 = <0x5100>;
+				dphy5 = <0xff>;
+				dphy6 = <0x1001>;
+				af_2v8-supply = <&ldo11>;
+				avdd_2v8-supply = <&ldo10>;
+				dovdd_1v8-supply = <&buck2>;
+				dvdd_1v2-supply = <&ldo8>;
+				pwdn-gpios = <&gpio 70 1>;
+				reset-gpios = <&gpio 69 1>;
+			};
 		};
 		backsensor {
 			compatible = "marvell,backsensor";
@@ -222,17 +242,37 @@
 				reset-gpios = <&gpio 67 1>;
 			};
 			OV2680b: sensor@6 {
-				compatible = "ovt,ov2680";
+                                compatible = "ovt,ov2680";
+                                status = "okay";
+                                clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
+                                clock-names =  "SC2MCLK";
+                                reg = <0x36>;
+                                sc2-i2c-dyn-ctrl;
+                                adapter = <0x1>;
+                                sensor-pos = <1>;
+                                mclk = <26000000>;
+                                dphy3 = <0x1500>;
+                                dphy5 = <0x11>;
+                                dphy6 = <0x1001>;
+                                af_2v8-supply = <&ldo11>;
+                                avdd_2v8-supply = <&ldo10>;
+                                dovdd_1v8-supply = <&buck2>;
+                                dvdd_1v2-supply = <&ldo8>;
+                                pwdn-gpios = <&gpio 68 1>;
+                                reset-gpios = <&gpio 67 1>;
+                        };
+                        S5K5E3B: sensor@7 {
+				compatible = "samsung,s5k5e3";
 				status = "okay";
-				clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
-				clock-names =  "SC2MCLK";
-				reg = <0x36>;
+                                clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
+                                clock-names =  "SC2MCLK";
+				reg = <0x10>;
 				sc2-i2c-dyn-ctrl;
 				adapter = <0x1>;
 				sensor-pos = <1>;
 				mclk = <26000000>;
-				dphy3 = <0x1500>;
-				dphy5 = <0x11>;
+				dphy3 = <0x5100>;
+				dphy5 = <0xff>;
 				dphy6 = <0x1001>;
 				af_2v8-supply = <&ldo11>;
 				avdd_2v8-supply = <&ldo10>;
