--- a/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
@@ -186,6 +186,27 @@
 				pwdn-gpios = <&gpio 70 1>;
 				reset-gpios = <&gpio 69 1>;
 			};
+                       S5K5E3F: sensor@1 {
+                               compatible = "samsung,s5k5e3";
+                               status = "okay";
+                               reg = <0x10>;
+                               clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
+                               clock-names = "SC2MCLK";
+                               sc2-i2c-dyn-ctrl;
+                               adapter = <0x1>;
+                               sensor-pos = <1>;
+                               mclk = <26000000>;
+                               dphy3 = <0x5100>;
+                               dphy5 = <0xff>;
+                               dphy6 = <0x1001>;
+                               af_2v8-supply = <&ldo8>;
+                               avdd_2v8-supply = <&ldo7>;
+                               dovdd_1v8-supply = <&buck2>;
+                               dvdd_1v2-supply = <&ldo17>;
+                               pwdn-gpios = <&gpio 70 1>;
+                               reset-gpios = <&gpio 69 1>;
+                       };
+
 		};
 		backsensor {
 			compatible = "marvell,backsensor";
@@ -312,6 +333,26 @@
 				avdd_2v8-supply = <&ldo7>;
 				dovdd_1v8-supply = <&buck2>;
 				dvdd_1v2-supply = <&ldo17>;
+				pwdn-gpios = <&gpio 68 1>;
+				reset-gpios = <&gpio 67 1>;
+			};
+			S5K5E3B: sensor@6 {
+                                compatible = "samsung,s5k5e3";
+                                status = "okay";
+                                reg = <0x10>;
+                                clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
+                                clock-names = "SC2MCLK";
+                                sc2-i2c-dyn-ctrl;
+                                adapter = <0x1>;
+                                sensor-pos = <1>;
+                                mclk = <26000000>;
+                                dphy3 = <0x5100>;
+                                dphy5 = <0xff>;
+                                dphy6 = <0x1001>;
+                                af_2v8-supply = <&ldo8>;
+                                avdd_2v8-supply = <&ldo7>;
+                                dovdd_1v8-supply = <&buck2>;
+                                dvdd_1v2-supply = <&ldo17>;
 				pwdn-gpios = <&gpio 68 1>;
 				reset-gpios = <&gpio 67 1>;
 			};
