arm: pxa1978: cpu level power management
Introduce C2 support for pxa1978.
This is using mmp_cpuidle and not arm64 mcpm_plat (TBD).
CPU power down cache disable and clear is tricky,
because Whitney core makes all accesses non-cacheable
once SCTLR.C is cleared. See the fix and explanation
under CONFIG_ARM_DC_DIS_NOHIT.

This passed a significant stress test on QT.
On QT better reduce the latency/residency x10
to enter C2 agressively.

Change-Id: If58bfece326128341d71d1fc855dc9eb4cb99542
Signed-off-by: Anton Eidelman <antone@marvell.com>

--- a/arch/arm/mach-mmp/Kconfig
+++ b/arch/arm/mach-mmp/Kconfig
@@ -139,6 +139,7 @@ config MACH_PXA1978_DT
 	select USE_OF
 	select PINCTRL
 	select PINCTRL_SINGLE
+	select ARM_DC_DIS_NOHIT
 	help
 	  Include support for PXA1978 (SBNB) platforms using
 	  the device tree. This SoC has Marvell Whitney ARMv7
@@ -210,4 +211,12 @@ config CPU_PXA1908
 config MMP_SRAM
 	bool
 
+config ARM_DC_DIS_NOHIT
+	bool
+	depends on CPU_V7
+	default n
+	help
+	  Say 'Y' if your ARMv7 CPU has non-cached access enforced
+	  when SCTLR.C=0. This requires special handling when
+	  disabling D-Cache.
 endif
