arm64: pxa1936_defconfig: enable leds regulator in device config
enable the use of leds regulator in the defconfig.
this was added for virtual key backlight support.

Change-Id: I577b6c9d84a6fac9088de0a85851da0729ca06df
Signed-off-by: Yoav Gvili <ygvili@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -2513,7 +2513,7 @@ CONFIG_LEDS_88PM88X_CFD=y
 # CONFIG_LEDS_PCA963X is not set
 # CONFIG_LEDS_PCA9685 is not set
 # CONFIG_LEDS_PWM is not set
-# CONFIG_LEDS_REGULATOR is not set
+CONFIG_LEDS_REGULATOR=y
 # CONFIG_LEDS_BD2802 is not set
 # CONFIG_LEDS_LT3593 is not set
 # CONFIG_LEDS_TCA6507 is not set
