arm64: dts: enable mipi-backlight for r63311
Since PXA1936_FF not use mipi-backlight for r63311.
So we need to check whether the mipi-backlight set.

Change-Id: I3bf157df2c7c6bbd1cb96d770a12ca79513ac587
Signed-off-by: Tim Wang <wangtt@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
@@ -98,6 +98,7 @@
 	panel1: r63311 {
 		rst_gpio = <&gpio 98 0>;
 		power_gpio = <&gpio 96 0>;
+		marvell,mipi-backlight;
 	};
 	panel2: hx8394 {
 		rst_gpio = <&gpio 98 0>;
