--- a/arch/arm64/boot/dts/pxa1936-ff.dts
+++ b/arch/arm64/boot/dts/pxa1936-ff.dts
@@ -69,7 +69,7 @@
 					output_cfg_val = <0x0>;
 				};
 				board_eeprom1:24aa025t@50 {
-					compatible = "at24,24c02";
+					compatible = "atmel,24c02";
 					reg = <0x50>;
 				};
 
