--- a/arch/arm64/boot/dts/88pm880_pxa1936_ff.dtsi
+++ b/arch/arm64/boot/dts/88pm880_pxa1936_ff.dtsi
@@ -16,7 +16,9 @@
 	 */
 	marvell,pmic-bd-cfg = <0x0 0x30 0xff 0xe8>,	/* set GPIO0 as 32K & GPIO1 for reset */
 				<0x4 0x24 0x30 0x20>,	/* enable buck1a sleep mode */
-				<0x4 0x26 0x7f 0x08>;	/* set buck1a sleep voltage to 0.7v */
+				<0x4 0x26 0x7f 0x08>,	/* set buck1a sleep voltage to 0.7v */
+				<0x1 0x5c 0xf0 0xa0>,	/* set LDO11_SET_SLP to 2.8V 						*/
+				<0x1 0x5d 0x30 0x20>;	/* set LDO11_SLP to be LDO11_SET_SLP value on sleep */
 
 	/* using lables, so no need for nesting */
 	/* ---buck--- */
@@ -81,6 +83,8 @@
 		regulator-boot-on;
 	};
 	ldo11: regulator-ldo11 {
+		regulator-always-on;
+		regulator-boot-on;
 	};
 	ldo12: regulator-ldo12 {
 		regulator-always-on;
