--- a/arch/arm64/boot/dts/pxa1936-ff.dts
+++ b/arch/arm64/boot/dts/pxa1936-ff.dts
@@ -25,6 +25,20 @@
 #define KEY_BACK	158	/* AC Back */
 
 #define GSEN_DRDY	91
+
+/* lm35352 definitions */
+#define LM3532_ILED1_FB_EN		(1 << 0)
+#define LM3532_ILED2_FB_EN		(1 << 1)
+#define LM3532_CTRL_A_ZONE_0_PWM_EN	(1 << 2)
+#define LM3532_CTRL_A_PWM_POL_ACT_HIGH	(1 << 1)
+#define LM3532_CTRL_CURRENT_CTRL_I2C	(1 << 0)
+#define LM3532_19p4mA_FS_CURRENT	0x12
+#define LM3532_LINEAR_MAPPING		(1 << 1)
+#define LM3532_OUTPUT_CONFIG_ILED3_A	((0x0 & 0x3) << 4)
+#define LM3532_OUTPUT_CONFIG_ILED2_A	((0x0 & 0x3) << 2)
+#define LM3532_OUTPUT_CONFIG_ILED1_A	((0x0 & 0x3) << 0)
+#define LM3532_OUTPUT_CONFIG	(LM3532_OUTPUT_CONFIG_ILED3_A | LM3532_OUTPUT_CONFIG_ILED2_A | LM3532_OUTPUT_CONFIG_ILED1_A)
+
 /dts-v1/;
 #include "pxa1936-board-common.dtsi"
 
@@ -53,20 +67,30 @@
 					vibrator-supply = <&ldo11>;
 				};
 				backlight1: lm3532@38 {
-					compatible = "bl,lm3532";
+					compatible = "ti,lm3532";
 					reg = <0x38>;
 					flags = <0>;
 					ramp_time = <0>;
-					ctrl_a_fs_current = <0x13>;
-					ctrl_a_mapping_mode = <0x2>;
-					ctrl_a_pwm = <0x86>;
+					ctrl_a_fs_current = <
+						LM3532_19p4mA_FS_CURRENT>;
+					ctrl_a_current_ctrl = <
+						LM3532_CTRL_CURRENT_CTRL_I2C>;
+					ctrl_a_mapping_mode = <LM3532_LINEAR_MAPPING>;
+					ctrl_a_pwm = <
+						(LM3532_CTRL_A_ZONE_0_PWM_EN |
+						 LM3532_CTRL_A_PWM_POL_ACT_HIGH)>;
 					rst_gpio = <&gpio BACKLIGHT_EN 0>;
-					/* set ldo9 , since driver requires an ldo/buck and the driver
-					* set it value to 2.8V. ldo9 is always ON
-					*/
+					/*
+					 * set ldo9 , since driver requires an
+					 * ldo/buck and the driver.
+					 * set it value to 2.8V.
+					 * ldo9 is always ON.
+					 */
 					avdd-supply = <&ldo9>;
-					feedback_en_val = <0x03>;
-					output_cfg_val = <0x0>;
+					feedback_en_val = <
+						(LM3532_ILED1_FB_EN | LM3532_ILED2_FB_EN)>;
+					output_cfg_val = <
+						LM3532_OUTPUT_CONFIG>;
 				};
 				board_eeprom1:24aa025t@50 {
 					compatible = "atmel,24c02";
