arm64: dts: the front and back sensor use the same i2c will cause conflict.
i2c i2c-1: Failed to register i2c client samsung,s5k5e3 at 0x10 (-16)

Change-Id: I1198edc775b397120bffd81f7cfb405c65ea149e
Signed-off-by: Chunlin Hu <huchl@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
@@ -319,7 +319,7 @@
 			S5K3L2: sensor@5 {
 				compatible = "samsung,s5k3l2";
 				status = "okay";
-				reg = <0x10>;
+				reg = <0x2d>;
 				clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
 				clock-names = "SC2MCLK";
 				sc2-i2c-dyn-ctrl;
