arm64: dts: pxa1908: run sdio tuning during probe
Enable sdio autotuning by default.

This feature is only needed for uhs sdio card like 8887.
If only SD8777 is only support in your platform, this patch is not need.

Change-Id: I8f29d6eaa8fae9d292d72224198e246c0c2d8e3d
Signed-off-by: Kevin Liu <kliu5@marvell.com>
Signed-off-by: Jialing Fu <jlfu@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-board-common.dtsi
@@ -240,6 +240,7 @@
 				marvell,sdh-tuning-win-limit = <100>;
 				marvell,sdh-dvfs-levels = <1 7>; /* tuning from dvfs level 1 to 7 */
 				marvell,sdh-tuning-mode = <PXA_SDH_TUNING_DVFS>;
+				marvell,sdh-sdio-probe-tune;
 				status = "okay";
 			};
 
