--- a/arch/arm64/boot/dts/88pm880.dtsi
+++ b/arch/arm64/boot/dts/88pm880.dtsi
@@ -162,5 +162,6 @@
 		regulator-max-microvolt = <1800000>;
 		regulator-always-on;
 		regulator-boot-on;
+		marvell,consumer-supplies = "buck1slp", "nameless";
 	};
 };
