--- a/arch/arm64/boot/dts/88pm886.dtsi
+++ b/arch/arm64/boot/dts/88pm886.dtsi
@@ -136,6 +136,7 @@
 		regulator-max-microvolt = <1800000>;
 		regulator-always-on;
 		regulator-boot-on;
+		marvell,consumer-supplies = "buck1slp", "nameless";
 	};
 
 };
