--- a/arch/arm64/boot/dts/pxa1936-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1936-board-common.dtsi
@@ -983,6 +983,7 @@
 				mmp_map_codec: mmp_map_codec {
 					compatible = "marvell,mmp-map-codec";
 					#dailink-cells = <1>;
+					sleep_vol = <975000>;
 				};
 				mmp_map_be: mmp_map_be {
 					compatible = "marvell,mmp-map-be";
