arm64: pxa1936: set buck5 as wib_3v3
If SDIO device enabled, both buck2 and buck5 should
disable sleep mode for normal sdio function support.

Change-Id: I78f2ee1e84c2053d4485ed8b8e51e01ca6c70e67
Signed-off-by: Tim Wang <wangtt@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1936-board-common.dtsi
@@ -1189,6 +1189,7 @@
 		pd-gpio = <&gpio 97 0>;
 		rst-gpio = <&gpio 71 0>;
 		wib_1v8-supply = <&buck2>;
+		wib_3v3-supply = <&buck5>;
 		edge-wakeup-gpio = <&gpio 39 0>;
 		status = "okay";
 	};
