arm64: dts: add ir drop resistance for 88pm88x
88pm880 need ir drop resistance to do IR drop
compensation

for IR drop compensation, please refer to below patch:
commit 75d8809c9a16aab5577e9d130eab721c1ace6f46
Author: Fenghang Yin <yinfh@marvell.com>
Date:   Fri Mar 6 13:51:51 2015 +0800

    power: 88pm880: support ir drop compensation

Change-Id: I2482f4308064162da1963a51f9b70a8ed4ac1630
Signed-off-by: Fenghang Yin <yinfh@marvell.com>

--- a/arch/arm64/boot/dts/88pm880_pxa1936_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm880_pxa1936_dkb.dtsi
@@ -117,6 +117,11 @@
 		cc-fixup = <102>;
 	};
 
+	charger {
+		ir-comp-res = <65>; /* mohm */
+		ir-comp-update = <5>; /* s */
+	};
+
 	led {
 		gpio-en = <0>;
 		flash-en-gpio = <124>;
