--- a/arch/arm64/boot/dts/88pm880_pxa1936_ff.dtsi
+++ b/arch/arm64/boot/dts/88pm880_pxa1936_ff.dtsi
@@ -129,6 +129,11 @@
 		cc-fixup = <102>;
 	};
 
+	charger {
+		ir-comp-res = <85>; /* mohm */
+		ir-comp-update = <5>; /* s */
+	};
+
 	led {
 		gpio-en = <0>;
 		flash-en-gpio = <CF_EN>;
