arm64: dts: use 485760ar batteries for pxa1936_dkb_v20
in order to align batteries used in development process, and
consider battery - 485760ar is enough, we decide to use 485760ar
for pxa1936 dkb v20

Change-Id: Idb4ca4c8e50c0c878ebda9128fdf7db0e1ce53a7
Signed-off-by: Fenghang Yin <yinfh@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
@@ -377,5 +377,5 @@
 #include "88pm88x.dtsi"
 #include "88pm880.dtsi"
 #include "88pm88x_battery_common.dtsi"
-#include "88pm88x_sp4555557sa.dtsi"
+#include "88pm88x_battery_485760ar.dtsi"
 #include "88pm880_pxa1936_dkb.dtsi"
