--- a/arch/arm64/boot/dts/pxa1908-dkb.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dtsi
@@ -152,5 +152,5 @@
 #include "88pm88x.dtsi"
 #include "88pm886.dtsi"
 #include "88pm88x_battery_common.dtsi"
-#include "88pm88x_sp4555557sa.dtsi"
+#include "88pm88x_battery_485760ar.dtsi"
 #include "88pm886_pxa1908_dkb.dtsi"
