--- a/arch/arm/configs/pxa1908_defconfig
+++ b/arch/arm/configs/pxa1908_defconfig
@@ -325,7 +325,9 @@ CONFIG_ARCH_MMP=y
 # CONFIG_MACH_MMP2_DT is not set
 # CONFIG_MACH_MMPX_DT is not set
 CONFIG_MACH_HELANX_DT=y
+# CONFIG_MACH_PXA1978_DT is not set
 CONFIG_CPU_PXA1908=y
+# CONFIG_ARM_DC_DIS_NOHIT is not set
 # CONFIG_PLAT_SPEAR is not set
 CONFIG_PLAT_PXA=y
 
@@ -1891,6 +1893,7 @@ CONFIG_SENSORS_BMI160_ENABLE_INT1=y
 CONFIG_SENSORS_BMI160_ENABLE_INT2=y
 CONFIG_SENSORS_BME280=y
 CONFIG_SENSORS_BME280_I2C=y
+# CONFIG_SENSORS_BMP280 is not set
 # CONFIG_SENSORS_SHT15 is not set
 # CONFIG_SENSORS_SHT21 is not set
 # CONFIG_SENSORS_SMM665 is not set
@@ -2216,7 +2219,9 @@ CONFIG_B52_CAMERA_OV2680=y
 CONFIG_B52_CAMERA_OV8858=y
 CONFIG_B52_CAMERA_SR544=y
 # CONFIG_B52_CAMERA_HI551 is not set
+# CONFIG_B52_CAMERA_S5K5E3 is not set
 # CONFIG_B52_CAMERA_OV5670 is not set
+# CONFIG_B52_CAMERA_S5K3L2 is not set
 
 #
 # Tools to develop new frontends
@@ -2350,6 +2355,7 @@ CONFIG_SND_MMP_PCM_HOSTLESS=y
 # CONFIG_SND_PXA910_SOC is not set
 CONFIG_SND_MMP_MAP=y
 CONFIG_SND_MMP_MAP_DUMP=y
+# CONFIG_SND_TDM_STATIC_ALLOC is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 CONFIG_SND_MMP_MAP_FE_DAI=y
 CONFIG_SND_SOC_88PM860=y
@@ -2613,7 +2619,6 @@ CONFIG_USB_MV_UDC=y
 CONFIG_USB_LIBCOMPOSITE=y
 CONFIG_USB_F_ACM=y
 CONFIG_USB_U_SERIAL=y
-CONFIG_USB_F_MASS_STORAGE=y
 # CONFIG_USB_CONFIGFS is not set
 # CONFIG_USB_ZERO is not set
 # CONFIG_USB_AUDIO is not set
@@ -3270,15 +3275,8 @@ CONFIG_DEBUG_KERNEL=y
 # Memory Debugging
 #
 # CONFIG_DEBUG_PAGEALLOC is not set
-CONFIG_DEBUG_OBJECTS=y
-CONFIG_DEBUG_OBJECTS_SELFTEST=y
-CONFIG_DEBUG_OBJECTS_FREE=y
-CONFIG_DEBUG_OBJECTS_TIMERS=y
-CONFIG_DEBUG_OBJECTS_WORK=y
-CONFIG_DEBUG_OBJECTS_RCU_HEAD=y
-CONFIG_DEBUG_OBJECTS_PERCPU_COUNTER=y
-CONFIG_DEBUG_OBJECTS_ENABLE_DEFAULT=1
-CONFIG_SLUB_DEBUG_ON=y
+# CONFIG_DEBUG_OBJECTS is not set
+# CONFIG_SLUB_DEBUG_ON is not set
 # CONFIG_SLUB_STATS is not set
 CONFIG_HAVE_DEBUG_KMEMLEAK=y
 CONFIG_DEBUG_KMEMLEAK=y
@@ -3309,7 +3307,7 @@ CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=1
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_ON_OOPS_VALUE=1
 CONFIG_PANIC_TIMEOUT=5
-CONFIG_SCHED_DEBUG=y
+# CONFIG_SCHED_DEBUG is not set
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 CONFIG_DEBUG_PREEMPT=y
@@ -3317,8 +3315,7 @@ CONFIG_DEBUG_PREEMPT=y
 #
 # Lock Debugging (spinlocks, mutexes, etc...)
 #
-CONFIG_DEBUG_RT_MUTEXES=y
-CONFIG_DEBUG_PI_LIST=y
+# CONFIG_DEBUG_RT_MUTEXES is not set
 # CONFIG_RT_MUTEX_TESTER is not set
 # CONFIG_DEBUG_SPINLOCK is not set
 # CONFIG_DEBUG_MUTEXES is not set
@@ -3328,10 +3325,8 @@ CONFIG_DEBUG_PI_LIST=y
 # CONFIG_LOCK_STAT is not set
 # CONFIG_DEBUG_ATOMIC_SLEEP is not set
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
-CONFIG_TRACE_IRQFLAGS=y
 CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_KOBJECT is not set
-# CONFIG_DEBUG_KOBJECT_RELEASE is not set
 CONFIG_DEBUG_BUGVERBOSE=y
 # CONFIG_DEBUG_WRITECOUNT is not set
 # CONFIG_DEBUG_LIST is not set
@@ -3364,25 +3359,23 @@ CONFIG_TRACE_CLOCK=y
 CONFIG_RING_BUFFER=y
 CONFIG_EVENT_TRACING=y
 CONFIG_CONTEXT_SWITCH_TRACER=y
-CONFIG_RING_BUFFER_ALLOW_SWAP=y
 CONFIG_TRACING=y
-CONFIG_GENERIC_TRACER=y
 CONFIG_TRACING_SUPPORT=y
 CONFIG_FTRACE=y
 # CONFIG_FUNCTION_TRACER is not set
-CONFIG_IRQSOFF_TRACER=y
-CONFIG_PREEMPT_TRACER=y
+# CONFIG_IRQSOFF_TRACER is not set
+# CONFIG_PREEMPT_TRACER is not set
 # CONFIG_SCHED_TRACER is not set
+CONFIG_ENABLE_DEFAULT_TRACERS=y
 # CONFIG_FTRACE_SYSCALLS is not set
 CONFIG_TRACER_SNAPSHOT=y
-CONFIG_TRACER_SNAPSHOT_PER_CPU_SWAP=y
+# CONFIG_TRACER_SNAPSHOT_PER_CPU_SWAP is not set
 CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
 # CONFIG_PROFILE_ALL_BRANCHES is not set
 # CONFIG_STACK_TRACER is not set
 # CONFIG_BLK_DEV_IO_TRACE is not set
 # CONFIG_PROBE_EVENTS is not set
-# CONFIG_FTRACE_STARTUP_TEST is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
 
