arm64: dts: pxa1936: force sdio tuning at probe
This is needed for SD8887 which support SDIO 3.0 in marvell pxa soc.
If SD8777 is supported, this patch is not need.

Change-Id: I7bd46d3653c645792453d9eb205b9ad9aa895908
Signed-off-by: Tim Wang <wangtt@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1936-board-common.dtsi
@@ -1191,6 +1191,7 @@
 		wib_1v8-supply = <&buck2>;
 		wib_3v3-supply = <&buck5>;
 		edge-wakeup-gpio = <&gpio 39 0>;
+		marvell,sdh-tuning-dvfs;
 		status = "okay";
 	};
 
