--- a/arch/arm64/boot/dts/pxa1936.dtsi
+++ b/arch/arm64/boot/dts/pxa1936.dtsi
@@ -291,8 +291,12 @@
 				clocks = <&soc_clocks PXA1936_CLK_SDH2
 					  &soc_clocks PXA1936_CLK_SDH_AXI
 					  &soc_clocks PXA1936_CLK_SDH2_DUMMY
+					  &soc_clocks PXA1936_CLK_CLST0
+					  &soc_clocks PXA1936_CLK_CLST1
+					  &soc_clocks PXA1936_CLK_AXI
+					  &soc_clocks PXA1936_CLK_DDR
 					  >;
-				clock-names = "sdh-base-clk", "sdh-axi-clk", "sdh-fclk-tuned";
+				clock-names = "sdh-base-clk", "sdh-axi-clk", "sdh-fclk-tuned", "clst0", "clst1", "axi", "ddr";
 				lpm-qos = <PM_QOS_CPUIDLE_BLOCK_AXI>;
 				status = "disabled";
 			};
@@ -304,8 +308,12 @@
 				clocks = <&soc_clocks PXA1936_CLK_SDH0
 					  &soc_clocks PXA1936_CLK_SDH_AXI
 					  &soc_clocks PXA1936_CLK_SDH0_DUMMY
+					  &soc_clocks PXA1936_CLK_CLST0
+					  &soc_clocks PXA1936_CLK_CLST1
+					  &soc_clocks PXA1936_CLK_AXI
+					  &soc_clocks PXA1936_CLK_DDR
 					  >;
-				clock-names = "sdh-base-clk", "sdh-axi-clk", "sdh-fclk-tuned";
+				clock-names = "sdh-base-clk", "sdh-axi-clk", "sdh-fclk-tuned", "clst0", "clst1", "axi", "ddr";
 				lpm-qos = <PM_QOS_CPUIDLE_BLOCK_AXI>;
 				status = "disabled";
 			};
@@ -317,8 +325,12 @@
 				clocks = <&soc_clocks PXA1936_CLK_SDH1
 					  &soc_clocks PXA1936_CLK_SDH_AXI
 					  &soc_clocks PXA1936_CLK_SDH1_DUMMY
+					  &soc_clocks PXA1936_CLK_CLST0
+					  &soc_clocks PXA1936_CLK_CLST1
+					  &soc_clocks PXA1936_CLK_AXI
+					  &soc_clocks PXA1936_CLK_DDR
 					  >;
-				clock-names = "sdh-base-clk", "sdh-axi-clk", "sdh-fclk-tuned";
+				clock-names = "sdh-base-clk", "sdh-axi-clk", "sdh-fclk-tuned", "clst0", "clst1", "axi", "ddr";
 				lpm-qos = <PM_QOS_CPUIDLE_BLOCK_AXI>;
 				status = "disabled";
 			};
