--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -2562,7 +2562,7 @@ CONFIG_RTC_INTF_DEV=y
 # I2C RTC drivers
 #
 CONFIG_RTC_DRV_88PM80X=y
-# CONFIG_RTC_DRV_88PM88X is not set
+CONFIG_RTC_DRV_88PM88X=y
 # CONFIG_RTC_DRV_DS1307 is not set
 # CONFIG_RTC_DRV_DS1374 is not set
 # CONFIG_RTC_DRV_DS1672 is not set
