arm64: dts: pxa1908: add cpu/ddr clocks in simple-dip driver
Simple-dip driver will get cpu/ddr clock pointer
by devm_clk_get. This patch adds some related
device tree info.

Change-Id: I452dd87012b6476e6d1f0d3ddebfb560a1678ac9
Signed-off-by: Bill Zhou <zhoub@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-board-common.dtsi
@@ -1250,6 +1250,9 @@
 
 	dip {
 		compatible = "marvell,simple-dip";
+		clocks = <&soc_clocks PXA1U88_CLK_CPU>,
+				<&soc_clocks PXA1U88_CLK_DDR>;
+		clock-names = "cpu", "ddr";
 	};
 
 	iml: iml@7ffffe0{
