arm64: dts: pxa1936: add cpu/ddr clocks in simple-dip driver
Simple-dip driver will get cpu/ddr clock pointer
by devm_clk_get. This patch adds some related
device tree info.

Change-Id: I5c45c548e7496fe49f00ef70b62788af6455678e
Signed-off-by: Bill Zhou <zhoub@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1936-board-common.dtsi
@@ -1242,6 +1242,10 @@
 
 	dip {
 		compatible = "marvell,simple-dip";
+		clocks = <&soc_clocks PXA1936_CLK_CLST0>,
+				<&soc_clocks PXA1936_CLK_CLST1>,
+				<&soc_clocks PXA1936_CLK_DDR>;
+		clock-names = "clst0", "clst1", "ddr";
 	};
 
 	iml: iml@7ffffe0{
