--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -1936,6 +1936,8 @@ CONFIG_VIDEO_MV_SC2_MMU=y
 CONFIG_VIDEO_MV_SC2_CCIC=y
 CONFIG_HOST_SUBDEV=y
 CONFIG_SOC_CAMERA=y
+CONFIG_SUBDEV_VCM=y
+CONFIG_SUBDEV_FLASH=y
 CONFIG_SOC_CAMERA_PLATFORM=y
 # CONFIG_VIDEO_RCAR_VIN is not set
 # CONFIG_VIDEO_SH_MOBILE_CSI2 is not set
