--- a/arch/arm64/boot/dts/pxa1936.dtsi
+++ b/arch/arm64/boot/dts/pxa1936.dtsi
@@ -265,6 +265,22 @@
 				status = "disabled";
 			};
 
+			codaL_vpu: codaL_vpu@d420d000 {
+				compatible = "mrvl,mmp-codaL";
+				reg = <0xd420d000 0x1000>,
+				      <0x0 0>;
+				interrupts = <0 25 0x4>;
+				status = "disabled";
+			};
+
+			codaL_JPG: codaL_JPG@d420d000 {
+				compatible = "mrvl,mmp-codaL";
+				reg = <0xd420d000 0x1000>,
+				      <0x0 0>;
+				interrupts = <0 46 0x4>;
+				status = "disabled";
+			};
+
 			intc: wakeupgen@d4282000 {
 				compatible = "mrvl,mmp-intc-wakeupgen";
 				reg = <0xd4282000 0x1000>,
