arm64: dts: add r63311 properties needed for pxa1936-ff
This patch adds the following properties:
pxa1936-ff.dts:
1. marvell,mipi-backlight: use panel as mipi backlight device.
2. mipi-backlight-max_brightness: let platform control maximal brightness.
3. mipi-backlight-min_brightness: let platform control minimal brightness.
4. iovdd-supply: handle to iovdd regulator (LDO5).

88pm880_pxa1936_ff.dtsi:
1. remove "regulator-always-on" property: since panel driver has power
   management capabilities we should remove always on property in order
   to take advantage of those capabilities.

Change-Id: If94153bc436f1ee17e27560ccaa8ef98b29d0235
Signed-off-by: Ohad Sharabi <sohad@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-ff.dts
+++ b/arch/arm64/boot/dts/pxa1936-ff.dts
@@ -247,6 +247,15 @@
 		/* camera */
 	};
 
+	panel1: r63311 {
+		marvell,mipi-backlight;
+		power_gpio = <&gpio 96 0>;
+		rst_gpio = <&gpio 98 0>;
+		mipi-backlight-max_brightness = <97>;
+		mipi-backlight-min_brightness = <1>;
+		iovdd-supply = <&ldo5>;
+	};
+
 	/* virtual keypad backlight */
 	keypad-bl {
 		compatible = "regulator-leds";
