drivers: marvell: security: Update TEE driver source code
1. TZDD driver internal version is v1.1.3
2. Add 24M secure memory support

Change-Id: Ia567954bbc32146e957aa2dd33d0203779ed1b10
Signed-off-by: Mi Li <mli18@marvell.com>

--- a/drivers/marvell/security/mmp-tzdd/src/Makefile
+++ b/drivers/marvell/security/mmp-tzdd/src/Makefile
@@ -84,6 +84,8 @@ endif
 
 ifeq ($(CONFIG_TEE_RES_CFG_16M), y)
 ccflags-y += -DTEE_RES_CFG_16M
+else ifeq ($(CONFIG_TEE_RES_CFG_24M), y)
+ccflags-y += -DTEE_RES_CFG_24M
 else
 ccflags-y += -DTEE_RES_CFG_8M
 endif
