arm64: dts: add pm_qos value to backlight driver in pxa1936ff
added power management qos value to the back light
dts setting.
this value sets the power management level permitted while the
driver is active

Change-Id: I27c8483ca95044ec7efbdafcb3d292be85af69ff
Signed-off-by: Yoav Gvili <ygvili@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-ff.dts
+++ b/arch/arm64/boot/dts/pxa1936-ff.dts
@@ -120,6 +120,7 @@
 						(LM3532_ILED1_FB_EN | LM3532_ILED2_FB_EN)>;
 					output_cfg_val = <
 						LM3532_OUTPUT_CONFIG>;
+					lpm-qos = <PM_QOS_CPUIDLE_BLOCK_DDR>;
 				};
 				board_eeprom1:24aa025t@50 {
 					compatible = "atmel,24c02";
