arm64: dts: enable sampling ID line feature in pxa1936ff
enable the feature to detect OTG by sample the ID line,
in pxa1936ff dts file

CQ00089396: resolved

Change-Id: If5bdaa0996b46491ef973a43aacb35f9e07ba5de
Signed-off-by: Yaacov Hazan <yaacovh@marvell.com>

--- a/arch/arm64/boot/dts/88pm880_pxa1936_ff.dtsi
+++ b/arch/arm64/boot/dts/88pm880_pxa1936_ff.dtsi
@@ -205,5 +205,8 @@
 
 	vbus {
 		gpadc-number = <3>;
+		id-ov-sampling;
+		id-ov-samp-count = <10>; /* number of samples */
+		id-ov-samp-sleep = <100>; /* sleep between each sample [mS] */
 	};
 };
