--- a/arch/arm64/boot/dts/pxa1936-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1936-board-common.dtsi
@@ -8,6 +8,7 @@
  */
 
 /memreserve/ 0x08100000 0x00040000;     /* ramoops buffer (256KB) */
+/memreserve/ 0x08140000 0x00008000;     /* share buffer with ATF (32KB) */
 /memreserve/ 0x09000000 0x01000000;	/* GPU Reserved mem (16MB) */
 /memreserve/ 0x17000000 0x01800000;     /* Frame buffer (24MB) */
 /memreserve/ 0x0a000000 0x00080000;     /* CM3 shared buffer(512KB) */
@@ -1154,6 +1155,13 @@
 			console-size = <0x30000>;
 			dump-oops = <0>;
 			status = "okay";
+		};
+
+		/* Share address and length with ATF */
+		atf {
+			compatible = "marvell, atf";
+			share-address = <0x8140000>;
+			share-size = <0x8000>;
 		};
 	};
 
