--- a/arch/arm64/boot/dts/pxa1936-ff.dts
+++ b/arch/arm64/boot/dts/pxa1936-ff.dts
@@ -421,6 +421,13 @@
 			};
 		};
 	};
+	mmp_m3_1: apsenhb {
+		pmicver = <2>;
+		vm3pwr-supply = <&ldo3>;
+		antpwr-supply = <&ldo16>;
+		vccmain-supply = <&buck1aslp>;
+	};
+
 
 	/* SENSOR HUB */
 	mmp_m3_2: cm3senhb {
