--- a/arch/arm64/boot/dts/pxa1936.dtsi
+++ b/arch/arm64/boot/dts/pxa1936.dtsi
@@ -976,8 +976,9 @@
 		      <0xd403b000 0x1000>,
 		      <0xd4090000 0x1000>,
 		      <0xd4282c00 0x400>,
-		      <0xd1df0000 0x98>;
-		reg-names = "mpmu", "apmu", "apbc", "apbcp", "apbs", "ciu", "dciu";
+		      <0xd1df0000 0x98>,
+			  <0xd420F000 0x850>;
+		reg-names = "mpmu", "apmu", "apbc", "apbcp", "apbs", "ciu", "dciu", "sc2desc";
 		#clock-cells = <1>;
         };
 
