arm64: pxa1936ff_dts: set prox pad to pull up during low power
Set pad pull up during low power mode. in dts
this prevent it for setting unexpected behaviour during low power

Change-Id: Id458001215061b51c3762334e1ba7635bf7833f2
Signed-off-by: Yoav Gvili <ygvili@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-ff.dts
+++ b/arch/arm64/boot/dts/pxa1936-ff.dts
@@ -46,7 +46,7 @@
 	apds990x_pins: pinmux_apds990x_pins {
 		/*pinctrl-single,pins = <GPIO(ALS_INT)>;*/
 		pinctrl-single,pins = <GPIO20 AF0>;
-		MFP_PULL_UP;
+		MFP_LPM_PULL_UP;
 	};
 	motion_sensor_pins: pinmux_motion_sensor_pins {
 		/* pinctrl-single,pins = <GPIO(GSEN_DRDY)>;*/
