--- a/arch/arm64/boot/dts/pxa1908.dtsi
+++ b/arch/arm64/boot/dts/pxa1908.dtsi
@@ -1032,4 +1032,11 @@
 		status = "disabled";
 	};
 
+	pmu {
+		compatible = "arm,armv8-pmuv3";
+		interrupts = <0 84 4>,
+			     <0 85 4>,
+			     <0 86 4>,
+			     <0 87 4>;
+	};
 };
